--- a/client/style.css
+++ b/client/style.css
@@ -3,11 +3,13 @@
   color: white;
   font-family: "Roboto", sans-serif;
 }
-
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: linear-gradient(to bottom, #fbbc05, #f8d572);
+  padding: 20px;
+  color: white;
 }
 
 body {
@@ -17,6 +19,20 @@ body {
     #fbbc05,
     #f8d572
   ); Yellow gradient from top to bottom */
+}
+
+p {
+  padding: 0; /* Remove padding */
+  margin: 0; /* Optionally remove margin as well */
+}
+
+.display {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Align items horizontally to the center */
+  align-items: center; /* Align items vertically to the center */
+  text-align: center; /* Align text to the center */
+  margin-bottom: 40px; /* Add margin as needed */
 }
 
 #logo {
@@ -88,10 +104,48 @@ nav a {
 @media (min-width: 768px) {
 }
 
-#footer {
-  width: 100%;
-  height: 100px;
-  color: black;
-  background-color: #fbbc05;
-  margin-top: 30px;
+footer {
+  background: linear-gradient(to bottom, #fbbc05, #f8d572);
+  padding: 20px;
+  color: white;
+  text-align: center;
+}
+
+
+footer p {
+  margin: 0;
+}
+
+/* Style the search container */
+.search-container {
+  display: flex;
+  align-items: center;
+}
+
+/* Style the search input */
+#search-bar {
+  padding: 8px;
+  border: none;
+  border-radius: 4px;
+  margin-right: 5px;
+  width: 200px; /* Adjust width as needed */
+}
+
+#search-bar:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+/* Style the search button */
+#search-button {
+  background-color: #f8d572; /* Match your theme color */
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+#search-button:hover {
+  background-color: #fbbc05; /* Darker shade of your theme color */
 }
