--- a/client/style.css
+++ b/client/style.css
@@ -1,22 +1,41 @@
 * {
-  background-color: black;
-  color: white;
+  color: black;
   font-family: "Roboto", sans-serif;
+  margin: 0px;
+  padding: 0px;
 }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: linear-gradient(to bottom, #fbbc05, #f8d572);
+  padding: 20px;
+  color: white;
 }
 
 body {
-  /*
-    background-image: linear-gradient(
-    to bottom,
-    #fbbc05,
-    #f8d572
+  background-color: black;
+}
+
+/* body {
+  /* /*
+      background-image: linear-gradient(
+      to bottom,
+      #fbbc05,
+      #f8d572
   ); Yellow gradient from top to bottom */
+*/ */ p {
+  padding: 0; /* Remove padding */
+  margin: 0; /* Optionally remove margin as well */
+}
+
+.display {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Align items horizontally to the center */
+  align-items: center; /* Align items vertically to the center */
+  text-align: center; /* Align text to the center */
 }
 
 #logo {
@@ -46,10 +65,6 @@ nav a {
   flex-direction: row;
 }
 
-.gallery-container {
-  margin-bottom: 40px;
-}
-
 .gallery {
   display: flex;
   align-items: center;
@@ -62,12 +77,13 @@ nav a {
 
 .gallery-images img {
   width: 200px;
-  height: 150px;
+  height: auto;
   object-fit: cover;
   margin-right: 10px;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
+
 .prev-btn,
 .next-btn {
   background: #fff;
@@ -88,10 +104,55 @@ nav a {
 @media (min-width: 768px) {
 }
 
-#footer {
-  width: 100%;
-  height: 100px;
-  color: black;
-  background-color: #fbbc05;
-  margin-top: 30px;
+footer {
+  background: linear-gradient(to bottom, #fbbc05, #f8d572);
+  padding: 20px;
+  color: white;
+  text-align: center;
+}
+
+footer p {
+  margin: 0;
+}
+
+/* Style the search container */
+.search-container {
+  display: flex;
+  align-items: center;
+}
+
+/* Style the search input */
+#search-bar {
+  padding: 8px;
+  border: none;
+  border-radius: 4px;
+  margin-right: 5px;
+  width: 200px; /* Adjust width as needed */
+}
+
+#search-bar:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+/* Style the search button */
+#search-button {
+  background-color: #f8d572; /* Match your theme color */
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+#search-button:hover {
+  background-color: #fbbc05; /* Darker shade of your theme color */
+}
+
+/* Add background images */
+
+.container-background {
+  background-image: url("sincerely-media-vZpHj0FyhnY-unsplash.webp");
+  background-size: cover;
+  background-position: center;
 }
