--- a/client/style.css
+++ b/client/style.css
@@ -11,7 +11,9 @@ header {
   align-items: center;
   background: linear-gradient(to bottom, #fbbc05, #f8d572);
   padding: 20px;
-  color: white;
+  
+  text-align: centre;
+  flex-direction: column;
 }
 
 
@@ -20,17 +22,8 @@ body {
 }
 
 
-/* body {
-  /* /*
-      background-image: linear-gradient(
-      to bottom,
-      #fbbc05,
-      #f8d572
-  ); Yellow gradient from top to bottom */
 
-  padding: 0; /* Remove padding */
-  margin: 0; /* Optionally remove margin as well */
-}
+
 
 .display {
   display: flex;
@@ -48,19 +41,34 @@ body {
   object-fit: cover; /* Maintain aspect ratio */
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  margin-right: 0; /* Remove margin on smaller screens */
+    margin-bottom: 10px; /* Add some space between logo and headings */
 }
 
-#SG {
-  color: blue;
-  margin-right: 300px;
-}
+
 
 nav {
   display: flex;
+  margin-left: auto; /* Pushes the nav to the right */
+  margin-left: 0; /* Remove margin on smaller screens */
 }
 
 nav a {
   margin-right: 10px; /* Adjust as needed */
+}
+
+.h1 {
+  display: block; /* Ensures each heading takes full width */
+  text-align: center; /* Center the text */
+  margin: 10px 0; /* Add margin for spacing */
+  font-size: 30pt;
+}
+
+.h2 {
+  display: block; /* Ensures each heading takes full width */
+  text-align: center; /* Center the text */
+  margin: 10px 0; /* Add margin for spacing */
+  font-size: 15pt;
 }
 
 .display {
@@ -104,9 +112,13 @@ nav a {
   background: #f0f0f0;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
+  header {
+    flex-direction: column; /* Stack elements vertically on smaller screens */
+    align-items: center; /* Center elements vertically */
+    text-align: center; /* Center text */
+  }
 }
-
 footer {
   background: linear-gradient(to bottom, #fbbc05, #f8d572);
   padding: 20px;
@@ -140,7 +152,7 @@ footer p {
 
 /* Style the search button */
 #search-button {
-  background-color: #f8d572; /* Match your theme color */
+  background-color: #070500; /* Match your theme color */
   color: white;
   padding: 8px 12px;
   border: none;
