Refactors and modifications on client
- Cached images locally in galleryBuilder.js
- Made galleryBuilder.js to construct the gallery dynamically on receipt of data from DB
- Added NetworkHandler.js to deal with fetching and pre-defined constants to avoid user error
- Implemented the glide.js library for fancy carousels

--- a/client/style.css
+++ b/client/style.css
@@ -76,13 +76,19 @@ nav a {
 .gallery-images {
   overflow: hidden;
   white-space: nowrap;
+  width: 800px;
 }
 
-.gallery-images img {
+#recently-added {
+  width: 800px;
+}
+.gallery-images .gallery-li {
   width: 200px;
   height: auto;
-  object-fit: cover;
-  margin-right: 10px;
+}
+.gallery-images .gallery-img {
+  width: 200px;
+  height: auto;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
